--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "RinatGizatullin/test",
+    "name": "rinat-gizatullin/test",
     "description": "Test project",
     "type": "project",
     "authors": [
