--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
             "role": "Developer"
         }
     ],
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
         "ext-curl": "*",
