--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "role": "Developer"
         }
     ],
-    "minimum-stability": "stable",
+    "license": "MIT",
     "require": {
         "php": ">=5.4.0",
         "ext-curl": "*",
