--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "license": "MIT",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
         "ext-curl": "*",
